# geoxygene

./: .buildinfo  .classpath  .gitignore  .project  .travis.yml  CHANGES  INSTALL  NEWS  NOTICE  ORACLE-LICENCE.txt  README  README.md  TODO  build.properties  build.xml  clc_legend.xml  index.html  objects.inv  plugins.xml  pom.xml  search.html  searchindex.js
_sources/: index.txt
_static/: geoxygene.css
apidocs/: allclasses-frame.html  allclasses-noframe.html  constant-values.html  deprecated-list.html  help-doc.html  index.html  overview-frame.html  overview-summary.html  overview-tree.html  package-list  serialized-form.html
col-siberie/: jd1_col_siberie.shx
community/: index.html  license.html  news.html  release.html
docs/: .classpath  .project  build.xml  common.py  pom.xml
documentation/: index.html
download/: geoxygene.html  geoxygene2d.html  geoxygene3d.html  index.html  openjump.html  wps.html
evidence4j/: pom.xml
geoxygene-api/: pom.xml
geoxygene-appli/: .gitignore  Copy of geoxygene-configuration.xml  geoxygene-configuration.xml  plugins.xml  pom.xml
geoxygene-appli/lib/xinitthread/src/: CMakeLists.txt  xinitthread.c
geoxygene-cartagen/: pearepJar.jardesc  pom.xml
geoxygene-carto/: pom.xml
geoxygene-contrib/: pom.xml
geoxygene-database/: pom.xml
geoxygene-deprecated/: pom.xml
geoxygene-example/: plugins.xml  pom.xml
geoxygene-feature/: pom.xml
geoxygene-filter/: .gitignore  pom.xml
geoxygene-geopensim/: pom.xml
geoxygene-graph/: .project  pom.xml
geoxygene-io/: pom.xml
geoxygene-jdbc/: pom.xml
src/: OJB.properties  (+2 more)
(+13748 files in other folders)
